--- a/transition.html
+++ b/transition.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>Переход в CSS3</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         /*  */
     </style>
 </head>
 <body>
+    <!-- Header -->
+    <header><nav><a href="/"><< Главная</a></nav></header>
+
     <!--  -->
 </body>
 </html>
