По умолчанию список открыт

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-<details>
+<details open>
     <summary>Трансформации, переходы и анимации</summary>
     <div>
         <ul class="nav">
