--- a/transform.html
+++ b/transform.html
@@ -123,7 +123,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header><nav><a href="/"><< Главная</a></nav></header>
+    <header><nav><a href=".."><< Главная</a></nav></header>
 
     <!-- Rotate -->
     <section>
