--- a/animation.html
+++ b/animation.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header><nav><a href=".."><< Главная</a></nav></header>
+    <header><nav><a href="./"><< Главная</a></nav></header>
 
     <!--  -->
 </body>
