Все анимации поместил в отдельный раздел "animation"

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <summary>Трансформации, переходы и анимации</summary>
     <div>
         <ul class="nav">
-            <li><a href="transform.html">Трансформации</a></li>
-            <li><a href="transition.html">Переходы</a></li>
-            <li><a href="animation.html">Анимация</a></li>
+            <li><a href="animation/transform.html">Трансформации</a></li>
+            <li><a href="animation/transition.html">Переходы</a></li>
+            <li><a href="animation/animation.html">Анимация</a></li>
         </ul>
     </div>
 </details>
