--- a/animation/transition.html
+++ b/animation/transition.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Переход в CSS3</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <style>
         section {
             margin-bottom: 100px;
@@ -97,7 +97,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header><nav><a href="./"><< Главная</a></nav></header>
+    <header><nav><a href="./../"><< Главная</a></nav></header>
 
     <!-- Transition - property -->
     <section>
