Структура для файлов FlexBox

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         </svg>
     </a>
 </header>
+
+<!-- Animations -->
 <details open>
     <summary>Трансформации, переходы и анимации</summary>
     <div>
@@ -60,6 +62,25 @@
             <li><a href="animation/transform.html">Трансформации</a></li>
             <li><a href="animation/transition.html">Переходы</a></li>
             <li><a href="animation/animation.html">Анимация</a></li>
+        </ul>
+    </div>
+</details>
+
+<!-- Flax box -->
+<details open>
+    <summary>Flex box</summary>
+    <div>
+        <ul class="nav">
+            <li><a href="flexbox/flex-content.html">Что такое Flexbox. Flex Container</a></li>
+            <li><a href="flexbox/flex-direction.html">Направление flex-direction</a></li>
+            <li><a href="flexbox/flex-wrap.html">flex-wrap</a></li>
+            <li><a href="flexbox/flex-flow.html">flex-flow. Порядок элементов</a></li>
+            <li><a href="flexbox/justify-content-1.html">Выравнивание элементов. justify-content</a></li>
+            <li><a href="flexbox/justify-content-2.html">Выравнивание элементов. align-items и align-self</a></li>
+            <li><a href="flexbox/align-content.html">Выравнивание строк и столбцов. align-content</a></li>
+            <li><a href="flexbox/managing-elements.html">Управление элементами. flex-basis, flex-shrink и flex-grow</a></li>
+            <li><a href="flexbox/multi-column-design.html">Многоколоночный дизайн на Flexbox</a></li>
+            <li><a href="flexbox/page-layout.html">Макет страницы на Flexbox</a></li>
         </ul>
     </div>
 </details>
