--- a/animation/transition.html
+++ b/animation/transition.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Переход в CSS3</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <style>
         section {
             margin-bottom: 100px;
