--- a/flexbox/flex-content.html
+++ b/flexbox/flex-content.html
@@ -5,7 +5,24 @@
     <title>Что такое Flexbox. Flex Container</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
-        /*  */
+        .flex-container {
+            display: flex;
+            border:2px solid #ccc;
+        }
+        .inline-flex-container {
+            display: inline-flex;
+            border:2px solid #ccc;
+            margin-top:10px;
+        }
+        .flex-item {
+            text-align:center;
+            font-size: 1.1em;
+            padding: 1.5em;
+            color: white;
+        }
+        .color1 {background-color: #675BA7;}
+        .color2 {background-color: #9BC850;}
+        .color3 {background-color: #A62E5C;}
     </style>
 </head>
 <body>
@@ -18,10 +35,20 @@
         <img src="/assets/images/flexbox21.png" alt="Основные понятия">
     </section>
 
-    <!-- Basic concepts -->
-    <!-- <section>
-        <h2>Основные понятия</h2>
-        <div class="flex">Block 1: Universal;</div>
-    </section> -->
+    <!-- Flex container -->
+    <section>
+        <h2>Создание flex-контейнера</h2>
+        <div class="flex-container">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+        </div>
+         
+        <div class="inline-flex-container">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+        </div>
+    </section>
 </body>
 </html>
