--- a/flexbox/flex-direction.html
+++ b/flexbox/flex-direction.html
@@ -5,16 +5,77 @@
     <title>Направление flex-direction</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
-        /*  */
+        .flex-container {
+            display: flex;
+            border:1px solid #ccc;
+        }
+        .flex-item {
+            text-align:center;
+            font-size: 1.1em;
+            padding: 1.5em;
+            color: white;
+        }
+        .color1 {background-color: #675BA7;}
+        .color2 {background-color: #9BC850;}
+        .color3 {background-color: #A62E5C;}
+        
+        /* ROW DIRECTION */
+        .row {
+            flex-direction: row;
+        }
+        .row-reverse {
+            flex-direction: row-reverse;
+        }
+        .column {
+            flex-direction: column;
+        }
+        .column-reverse {
+            flex-direction: column-reverse;
+        }
     </style>
 </head>
 <body>
     <!-- Header -->
     <header><nav><a href="./../"><< Главная</a></nav></header>
 
-    <!--  -->
+    <!-- Row -->
     <section>
-        <h2></h2>
+        <h2>Row</h2>
+        <div class="flex-container row">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+        </div>
+    </section>
+
+    <!-- Row reverse -->
+    <section>
+        <h2>Row-reverse</h2>
+        <div class="flex-container row-reverse">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+        </div>
+    </section>
+
+    <!-- Column -->
+    <section>
+        <h2>Column</h2>
+        <div class="flex-container column">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+        </div>
+    </section>
+
+    <!-- Column-reverse -->
+    <section>
+        <h2>Column-reverse</h2>
+        <div class="flex-container column-reverse">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+        </div>
     </section>
 </body>
 </html>
