--- a/flexbox/align-content.html
+++ b/flexbox/align-content.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Направление flex-direction</title>
+    <title>Выравнивание строк и столбцов. align-content</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
         /*  */
