--- a/flexbox/flex-flow.html
+++ b/flexbox/flex-flow.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Направление flex-direction</title>
+    <title>flex-flow. Порядок элементов</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
         /*  */
