--- a/flexbox/justify-content-1.html
+++ b/flexbox/justify-content-1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Направление flex-direction</title>
+    <title>Выравнивание элементов. justify-content</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
         /*  */
