--- a/flexbox/justify-content-2.html
+++ b/flexbox/justify-content-2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Направление flex-direction</title>
+    <title>Выравнивание элементов. align-items и align-self</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
         /*  */
