--- a/flexbox/managing-elements.html
+++ b/flexbox/managing-elements.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Направление flex-direction</title>
+    <title>Управление элементами. flex-basis, flex-shrink и flex-grow</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
         /*  */
