--- a/flexbox/page-layout.html
+++ b/flexbox/page-layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Направление flex-direction</title>
+    <title>Макет страницы на Flexbox</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
         /*  */
