Поправил путь к стилю (style.css)

--- a/flexbox/flex-content.html
+++ b/flexbox/flex-content.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Что такое Flexbox. Flex Container</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <style>
         .flex-container {
             display: flex;
@@ -32,7 +32,7 @@
     <!-- Basic concepts -->
     <section>
         <h2>Основные понятия</h2>
-        <img src="/assets/images/flexbox21.png" alt="Основные понятия">
+        <img src="../assets/images/flexbox21.png" alt="Основные понятия">
     </section>
 
     <!-- Flex container -->
