--- a/flexbox/flex-direction.html
+++ b/flexbox/flex-direction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Направление flex-direction</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <style>
         .flex-container {
             display: flex;
