--- a/flexbox/align-content.html
+++ b/flexbox/align-content.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Выравнивание строк и столбцов. align-content</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <style>
         /*  */
     </style>
