--- a/flexbox/flex-flow.html
+++ b/flexbox/flex-flow.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>flex-flow. Порядок элементов</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <style>
         /*  */
     </style>
