--- a/flexbox/page-layout.html
+++ b/flexbox/page-layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Макет страницы на Flexbox</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <style>
         /*  */
     </style>
