--- a/flexbox/justify-content-1.html
+++ b/flexbox/justify-content-1.html
@@ -5,16 +5,137 @@
     <title>Выравнивание элементов. justify-content</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
-        /*  */
+        .inline-block {
+            display: inline-table;
+        }
+        .flex-container {
+            display: flex;
+            border:1px #ccc solid;
+        }
+        .flex-column {
+            flex-direction: column;
+            height: 400px;
+        }
+        .flex-end {
+            justify-content: flex-end;
+        }
+        .center {
+            justify-content: center;
+        }
+        .space-between {
+            justify-content: space-between;
+        }
+        .space-around {
+            justify-content: space-around;
+        }
+        .flex-item {
+            text-align: center;
+            font-size: 1em;
+            padding: 1.5em;
+            color: white;
+        }
+        .color1 {background-color: #675BA7;}
+        .color2 {background-color: #9BC850;}
+        .color3 {background-color: #A62E5C;}
+        .color4 {background-color: #2A9FBC;}
+        .color5 {background-color: #F15B2A;}
     </style>
 </head>
 <body>
     <!-- Header -->
     <header><nav><a href="./../"><< Главная</a></nav></header>
 
-    <!--  -->
+    <h1>flex-direction: ROW;</h1>
+
+    <!-- Flex-end -->
     <section>
-        <h2></h2>
+        <h2>Flex-end</h2>
+        <div class="flex-container flex-end">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Center -->
+    <section>
+        <h2>Center</h2>
+        <div class="flex-container center">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Space-between -->
+    <section>
+        <h2>Space-between</h2>
+        <div class="flex-container space-between">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Space-around -->
+    <section>
+        <h2>Space-around</h2>
+        <div class="flex-container space-around">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <br><br>
+    <h1>flex-direction: COLUMN;</h1>
+    
+    <!-- Flex-end -->
+    <section class="inline-block">
+        <h2>Flex-end</h2>
+        <div class="flex-container flex-column flex-end">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Center -->
+    <section class="inline-block">
+        <h2>Center</h2>
+        <div class="flex-container flex-column center">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Space-between -->
+    <section class="inline-block">
+        <h2>Space-between</h2>
+        <div class="flex-container flex-column space-between">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Space-around -->
+    <section class="inline-block">
+        <h2>Space-around</h2>
+        <div class="flex-container flex-column space-around">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
     </section>
 </body>
 </html>
