--- a/flexbox/justify-content-2.html
+++ b/flexbox/justify-content-2.html
@@ -5,16 +5,159 @@
     <title>Выравнивание элементов. align-items и align-self</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <style>
-        /*  */
+        .flex-container {
+            display: flex;
+            border: 1px #ccc solid;
+            height: 5em;
+        }
+        .flex-direction-column {
+            display: inline-block;
+        }
+        .flex-direction-column .flex-container {
+            flex-direction: column;
+            width: 200px;
+            height: 300px;
+        }
+        .flex-stretch .flex-container {
+            justify-content: space-between;
+            align-items: stretch;
+            width: 1000px;
+            height: 12em;
+        }
+        .flex-item {
+            text-align:center;
+            font-size: 1em;
+            padding: 1.2em;
+            color: white;
+                
+        }
+        .color1 {background-color: #675BA7;}
+        .color2 {background-color: #9BC850;}
+        .color3 {background-color: #A62E5C;}
+        .color4 {background-color: #2A9FBC;}
+        
+        /* ALIGN-ITEMS */
+        .flex-start {
+            align-items: flex-start;
+        }
+        .flex-end {
+            align-items: flex-end;
+        }
+        .center {
+            align-items: center;
+        }
+        .baseline {
+            align-items: baseline;
+        }
+        .largest-item { 
+            padding-top: 2em;
+        }
+
+        /* ALIGN-SELF */
+        .item1 {background-color: #675BA7; align-self: center; }
+        .item2 {background-color: #9BC850; align-self: flex-start;}
+        .item3 {background-color: #A62E5C; align-self: flex-end;}
+        .item4 {background-color: #2A9FBC; align-self: center;}
     </style>
 </head>
 <body>
     <!-- Header -->
     <header><nav><a href="./../"><< Главная</a></nav></header>
 
-    <!--  -->
+    <h1>align-items property - ROW</h1>
+
+    <!-- Flex-start -->
     <section>
-        <h2></h2>
+        <h2>Flex-start</h2>
+        <div class="flex-container flex-start">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Flex-end -->
+    <section>
+        <h2>Flex-end</h2>
+        <div class="flex-container flex-end">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Center -->
+    <section>
+        <h2>Center</h2>
+        <div class="flex-container center">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Baseline -->
+    <section>
+        <h2>Baseline</h2>
+        <div class="flex-container baseline">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2 largest-item">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <br><br>
+    <h1>align-items property - COLUMN</h1>
+
+    <!-- Flex-start -->
+    <section class="flex-direction-column">
+        <h2>Flex-start</h2>
+        <div class="flex-container flex-start">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Flex-end -->
+    <section class="flex-direction-column">
+        <h2>Flex-end</h2>
+        <div class="flex-container flex-end">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <!-- Center -->
+    <section class="flex-direction-column">
+        <h2>Center</h2>
+        <div class="flex-container center">
+            <div class="flex-item color1">Flex Item 1</div>
+            <div class="flex-item color2">Flex Item 2</div>
+            <div class="flex-item color3">Flex Item 3</div>
+            <div class="flex-item color4">Flex Item 4</div>
+        </div>
+    </section>
+
+    <br><br>
+    <h1>align-self property</h1>
+
+    <!-- Align-self -->
+    <section class="flex-stretch">
+        <h2>Align-self</h2>
+        <div class="flex-container">
+            <div class="flex-item item1">Flex Item 1</div>
+            <div class="flex-item item2">Flex Item 2</div>
+            <div class="flex-item item3">Flex Item 3</div>
+            <div class="flex-item item4">Flex Item 4</div>
+        </div>
     </section>
 </body>
 </html>
