Структура для Grid layout

--- a/index.html
+++ b/index.html
@@ -84,5 +84,26 @@
         </ul>
     </div>
 </details>
+
+<!-- Grid layout -->
+<details open>
+    <summary>Grid Layout</summary>
+    <div>
+        <ul class="nav">
+            <li><a href="grid/grid-layout.html">Что такое Grid Layout. Grid Container</a></li>
+            <li><a href="grid/row-and-columns.html">Строки и столбцы</a></li>
+            <li><a href="grid/repeat-and-grid-property.html">Функция repeat и свойство grid</a></li>
+            <li><a href="grid/rows-and-column-sizes.html">Размеры строк и столбцов</a></li>
+            <li><a href="grid/margins.html">Отступы между столбцами и строками</a></li>
+            <li><a href="grid/positioning-off-elements.html">Позиционирование элементов</a></li>
+            <li><a href="grid/superimposing-elements.html">Наложение элементов</a></li>
+            <li><a href="grid/direction-and-order-elements.html">Направление и порядок элементов</a></li>
+            <li><a href="grid/named-grid-lines.html">Именованные grid-линии</a></li>
+            <li><a href="grid/named-grid-lines-and-repeats.html">Именованные grid-линии и функция repeat</a></li>
+            <li><a href="grid/grid-areas.html">Области грида</a></li>
+            <li><a href="grid/page-layout-in-grid-layout.html">Макет страницы в Grid Layout</a></li>
+        </ul>
+    </div>
+</details>
 </body>
 </html>
