--- a/grid/grid-layout.html
+++ b/grid/grid-layout.html
@@ -5,16 +5,52 @@
     <title>Что такое Grid Layout. Grid Container</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
-        /*  */
+        .grid-container {
+            border: solid 2px #000;
+            display: grid;
+        }
+        .inline-grid-container {
+            border: solid 2px #000;
+            display: inline-grid;
+        }
+        .grid-item {
+            text-align: center;
+            font-size: 1.1em;
+            padding: 1.5em;
+            color: white;
+        }
+        .color1 {background-color: #675BA7;}
+        .color2 {background-color: #9BC850;}
+        .color3 {background-color: #A62E5C;}
+        .color4 {background-color: #2A9FBC;}
     </style>
 </head>
 <body>
     <!-- Header -->
     <header><nav><a href="./../"><< Главная</a></nav></header>
 
-    <!--  -->
+    <!-- grid-container property -->
     <section>
-        <h2>###</h2>
+        <h2>Создание grid-контейнера</h2>
+        <div class="grid-container">
+            <div class="grid-item color1">Grid Item 1</div>
+            <div class="grid-item color2">Grid Item 2</div>
+            <div class="grid-item color3">Grid Item 3</div>
+            <div class="grid-item color4">Grid Item 4</div>
+            <div class="grid-item color1">Grid Item 5</div>
+        </div>
+    </section>
+
+    <!-- inline-grid-container property -->
+    <section>
+        <h2>Создание inline-grid-контейнера</h2>
+        <div class="inline-grid-container">
+            <div class="grid-item color1">Grid Item 1</div>
+            <div class="grid-item color2">Grid Item 2</div>
+            <div class="grid-item color3">Grid Item 3</div>
+            <div class="grid-item color4">Grid Item 4</div>
+            <div class="grid-item color1">Grid Item 5</div>
+        </div>
     </section>
 </body>
 </html>
